Change file name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ if(KINECT_ENABLED)
     GePoTool.h
     Detectors/GestureDetectorBase.h
     SkeletonSmoother.h
-    KinectUtilTypes.h
+    KinectUtilsTypes.h
   )
 
 #Append Gesture Detectors
