Support both multi-thred working and single thread working. If you want to use the multi-thread just st KINECTRON_MULTI_THREAD to true in your CMakeLists.txt file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,14 @@ else()
     message("NOTICE [Kinectron]: Architecture is not set. Defaulting to x86")
 endif()
 
+if (KINECTRON_MULTI_THREAD)
+    add_definitions(-DKINECTRON_MULTI_THREAD=1)
+    message("NOTICE [Kinectron]: Using a seperate thread for the update method")
+else()
+    add_definitions(-DKINECTRON_MULTI_THREAD=0)
+    message("NOTICE [Kinectron]: Using the main thread for the update method. To enable multi-threading set KINECTRON_MULTI_THREAD to true")
+endif(KINECTRON_MULTI_THREAD)
+
 set(KINECT_ENABLED OFF CACHE BOOL "Kinect 2.x SDK found")
 set(KINECTSDK20_DIR "NOT FOUND" CACHE PATH "Kinect 2.x SDK path")
 if(WIN32)
