--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,13 @@ else()
     message("NOTICE [Kinectron]: Architecture is not set. Defaulting to x86")
 endif()
 
-if (KINECTRON_MULTI_THREAD)
-    add_definitions(-DKINECTRON_MULTI_THREAD=1)
-    message("NOTICE [Kinectron]: Using a seperate thread for the update method")
+if (KINECTRON_SINGLE_THREAD)
+    add_definitions(-DKINECTRON_SINGLE_THREAD=1)
+    message("NOTICE [Kinectron]: Using the main thread for the update method. To enable multi-threading set KINECTRON_SINGLE_THREAD to false")
 else()
-    add_definitions(-DKINECTRON_MULTI_THREAD=0)
-    message("NOTICE [Kinectron]: Using the main thread for the update method. To enable multi-threading set KINECTRON_MULTI_THREAD to true")
-endif(KINECTRON_MULTI_THREAD)
+    add_definitions(-DKINECTRON_SINGLE_THREAD=0)
+    message("NOTICE [Kinectron]: Using a seperate thread for the update method")
+endif(KINECTRON_SINGLE_THREAD)
 
 set(KINECT_ENABLED OFF CACHE BOOL "Kinect 2.x SDK found")
 set(KINECTSDK20_DIR "NOT FOUND" CACHE PATH "Kinect 2.x SDK path")
